samples/pass/function_add.c
int add(int a, int b) {
    return a + b;
}

int main() {
    int x = add(7, 8);
    print_int(x);
    print_newline();
    return x;
}
