samples/fail/duplicate_function.c
int add(int a, int b) {
    return a + b;
}

int add(int x, int y) {
    return x - y;
}

int main() {
    return add(1, 2);
}
